--- a/html.html
+++ b/html.html
@@ -44,6 +44,6 @@
     <hr>
     <span style="display: block; width: 50%;">Текст после линии</span>
     <input type="text" name="Текст кнопки:" id="">
-    <button>Отправить</button>
+    <button>Отправить туда</button>
 </body>
 </html>
